--- a/AddressBookSystem/AddressBookSystem.csproj
+++ b/AddressBookSystem/AddressBookSystem.csproj
@@ -42,6 +42,9 @@
     <Reference Include="Microsoft.Bcl.HashCode, Version=1.0.0.0, Culture=neutral, PublicKeyToken=cc7b13ffcd2ddd51, processorArchitecture=MSIL">
       <HintPath>..\packages\Microsoft.Bcl.HashCode.1.0.0\lib\net461\Microsoft.Bcl.HashCode.dll</HintPath>
     </Reference>
+    <Reference Include="Newtonsoft.Json, Version=13.0.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
+      <HintPath>..\packages\Newtonsoft.Json.13.0.1\lib\net45\Newtonsoft.Json.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Buffers, Version=4.0.2.0, Culture=neutral, PublicKeyToken=cc7b13ffcd2ddd51, processorArchitecture=MSIL">
       <HintPath>..\packages\System.Buffers.4.4.0\lib\netstandard2.0\System.Buffers.dll</HintPath>
@@ -71,6 +74,7 @@
     <None Include="AddressBk.csv" />
     <Compile Include="AddressBook.cs" />
     <Compile Include="Contact.cs" />
+    <None Include="AddressBk.json" />
     <None Include="CsvData.csv" />
     <Compile Include="IContact.cs" />
     <Compile Include="Program.cs" />
